--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
                     </li>
                     {% for social in site.mysocial %}
                     <li>
-                        <a href="{{ social.url }}" target="_blank"><i class="fa fa-lg fa-{{ social.title }}"></i></a>
+                        <a href="{{ social.url }}" target="_blank"><i class="fa fa-md fa-{{ social.title }}"></i></a>
                     </li>
                     {% endfor %}
                 </ul>
