--- a/_includes/news.html
+++ b/_includes/news.html
@@ -10,7 +10,7 @@
                 {% for news in site.news %}
                 <tr>
                     <td  class="col-md-2">
-                        <div style="font-size:1.5em;"> 
+                        <div> 
                             <h3> {{ news.title }} </h3>
                         </div>
                     </td>
