--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -14,7 +14,7 @@
             <a href="#publicationModal{{ post.modal-id }}" class="publication-item publication-link" data-toggle="modal">
                 <div class="row publication-row">
                     <div class="col-md-3 center-block" style="max-width: 350px;">
-                        <img src="img/publication/{{ post.thumbnail }}" class="img-responsive publication-img" alt="">
+                        <img src="img/publication/thumbnail/{{ post.thumbnail }}" class="img-responsive publication-img" alt="">
                     </div>
                     <div class="col-md-9">
                         <h4 class="publication-title">{{ post.title }}</h4>
