--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,6 +1,6 @@
  <!-- Portfolio Modals -->
  {% for post in site.posts %}
-    <div class="publication-modal modal fade" id="publicationModal{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="publication-modal modal fade" id="publication-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
