--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -11,7 +11,7 @@
 
         <div class="container">
         {% for post in site.posts %}
-            <a href="#publicationModal{{ post.modal-id }}" class="publication-item publication-link" data-toggle="modal">
+            <a href="#publication-{{ post.modal-id }}" class="publication-item publication-link" data-toggle="modal">
                 <div class="row publication-row">
                     <div class="col-md-3 center-block" style="max-width: 350px;">
                         <img src="img/publication/thumbnail/{{ post.thumbnail }}" class="img-responsive publication-img" alt="">
