--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -13,7 +13,7 @@
                     <div class="col-lg-10 col-lg-offset-1">
                         <div class="modal-body">
                             <h3>{{ post.title }}</h3>
-                            <p><em> {{ post.authors }} </em></p>
+                            <p class="name"> {{ post.authors }} </p>
                             <ul class="list-inline">
 
                                 {% if post.pdf-link %}
