--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -11,9 +11,14 @@
 
         <div class="container">
         {% for post in site.posts %}
+
+            {% if post.redirect %}
+            <a href="{{ post.redirect }}" class="publication-item publication-link">
+            {% else %}
             <a href="#publication-{{ post.modal-id }}" class="publication-item publication-link" data-toggle="modal">
+            {% endif %}
                 <div class="row publication-row">
-                    <div class="col-md-3 center-block" style="max-width: 350px;">
+                    <div class="col-md-3 center-block" style="max-height: 150px;">
                         <img src="img/publication/thumbnail/{{ post.thumbnail }}" class="img-responsive publication-img" alt="">
                     </div>
                     <div class="col-md-9">
