--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %} z-depth-1">
     <div class="container">
       {% if page.title != "about" %}
-      <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/">
+      <a class="navbar-brand title font-weight-lighter" href="{{ site.url }}/">
        {% if site.title == blank %}{{ site.title }}{% else %}<span class="font-weight-bold">{{ site.first_name }} {{ site.middle_name }}  {{ site.last_name }}</span>{% endif %}
       </a>
       {% elsif site.show_social_icons %}
