--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -17,11 +17,9 @@ layout: default
       {% if page.profile.image %}
         <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
       {% endif %}
-      {% if page.profile.address %}
-        <div class="address">
+        <div class="address" style="min-height: 0.5rem;">
           {{ page.profile.address }}
         </div>
-      {% endif %}
     </div>
     {% endif %}
 
