--- a/_includes/scripts/misc.html
+++ b/_includes/scripts/misc.html
@@ -10,4 +10,4 @@ $(function () {$('[data-toggle="tooltip"]').tooltip()})
 <script src="{{ '/assets/js/common.js' | relative_url }}"></script>
 
 <!-- Load DarkMode JS -->
-<script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>
+<!-- <script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>-->
