--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -17,7 +17,9 @@
 
 <div class="row">
   <div class="col-sm-4 center-block">
+    <a href="{{ entry.html }}">
     <img src="/assets/img/publication/thumbnail/{{ entry.thumbnail }}" class="img-responsive publication-img" alt="">
+    </a>
   </div>
 
   <div id="{{entry.key}}" class="col-sm-8">
