--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -26,7 +26,7 @@ layout: default
 
   <ol class="bibliography">
   {% for entry in site.posts %}
-    {% if entry.iscourse %}
+    {% if entry.iscourse and entry.term contains y %}
       <li>
       <div class="row">
         <div class="col-sm-4 center-block">
